mule-user-guide/v/3.5/security-manager-configuration-reference.adoc
= 安全管理器配置参考
:keywords: anypoint studio, esb, security

此页面提供有关为安全管理器配置的元素的详细信息。有关更多信息，请参阅 link:/mule-user-guide/v/3.7/configuring-security[配置安全性]。

== 安全经理

默认的安全管理器。

。<security-manager...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
| ID为|  | {无{3}} _ {muleSecurityManager {4}}
| {名称{1}} | {无{3}} _ {muleSecurityManager {4}}
|===

。<security-manager...>的子元素
[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|自定义安全提供程序 | 0..1  | SecurityProvider的自定义实现。
|自定义加密策略 | 0..1  | EncryptionStrategy的自定义实现。
| secret-key-encryption-strategy  | 0..1  |使用JCE提供基于秘密密钥的加密。
| password-encryption-strategy  | 0..1  |使用JCE提供基于密码的加密。用户必须指定一个密码以及可选的盐和迭代计数。默认算法是PBEWithMD5AndDES，但用户可以指定JCE支持的任何有效算法。
|===

== 自定义安全提供程序

SecurityProvider的自定义实现。

。<custom-security-provider...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|姓名|姓名（无空格）|是|  |
| provider-ref |字符串|是|  |要使用的安全提供程序的名称。
|===

。<custom-security-provider...>的子元素
[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
| spring：property  | 0 .. *  |自定义配置的Spring样式属性元素。
|===

== 自定义加密策略

EncryptionStrategy的自定义实现。

。<custom-encryption-strategy...>的属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|姓名 |姓名（无空格） |是|  |
| strategy-ref  | string  |是|  |对加密策略的引用（可能是实现EncryptionStrategy接口的Spring bean）。
|===

。<custom-encryption-strategy...>的子元素
[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|弹簧：属性 | 0 .. *  | 
|===

== 秘密密钥加密策略

使用JCE提供基于秘密密钥的加密。

。<secret-key-encryption-strategy...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|姓名 |姓名（无空格） |是|  |
|键 |字符串 |否 |  |使用的关键。这和'keyFactory-ref'属性是互斥的。
| keyFactory-ref  |字符串 |否 |  |要使用的关键工厂的名称。这应该实现ObjectFactory接口并返回一个字节数组。这和'key'属性是相互排斥的。
|===

。<secret-key-encryption-strategy...>的子元素
[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 密码加密策略

使用JCE提供基于密码的加密。用户必须指定一个密码以及可选的盐和迭代计数。默认算法是PBEWithMD5AndDES，但用户可以指定JCE支持的任何有效算法。

。<password-encryption-strategy...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|姓名 |姓名（无空格） |是|  |
|密码 |字符串 |是 |  |要使用的密码。
|盐 |字符串 |否 |  |使用盐（这有助于防止字典攻击）。
| iterationCount  |整数 |否 |  |要使用的迭代次数。
|===

。<password-encryption-strategy...>的子元素
[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===
